@@ -28,6 +28,8 @@ Callback/Makefile.PL
 Callback/t/02_Callback.t
 Callback/t/03_Jim_Shaw.t
 Callback/t/04_rt_53914.t
+Callback/t/ithreads.t
+Callback/t/threading_fails.t
 Changes
 Makefile.PL
 MANIFEST			This list of files
@@ -57,6 +59,12 @@ t/02_GetProcess.t
 t/03_undef.t
 t/04_rt_48006.t
 t/05_more_struct.t
+t/06_rt_74578.t
+t/pod-coverage.t
+t/pod.t
+t/v69.t
+t/v70.t
+t/v71.t
 Test.pm
 TODO
 Type.pm
